[package]
name = "stadiumfrag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bitstream-io = "1.6.0"
clap = { version = "4.0.32", features = ["derive"] }
regex = { version = "1.7.0", default-features = false, features = ["std", "perf"] }
